err/wikidump.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wikidump'...
Compiling './lib/python3.5/site-packages/wikidump/__init__.py'...
***   File "./lib/python3.5/site-packages/wikidump/__init__.py", line 25
    print "  %-20s%s" % (key, dumps[key])
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wikidump/analysis.py'...
***   File "./lib/python3.5/site-packages/wikidump/analysis.py", line 42
    print "All documents length mean: %.2f" % n.mean(doc_lengths)
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wikidump/counter.py'...
***   File "./lib/python3.5/site-packages/wikidump/counter.py", line 190
    print doctest.testmod()
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wikidump/dataset.py'...
***   File "./lib/python3.5/site-packages/wikidump/dataset.py", line 72
    raise ValueError, "%s is not a directory" % path
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wikidump/sampling.py'...
***   File "./lib/python3.5/site-packages/wikidump/sampling.py", line 25
    raise RNGError, "Default RNG disabled - please pass an explicit RNG"
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wikidump/segment.py'...
***   File "./lib/python3.5/site-packages/wikidump/segment.py", line 73
    raise ValueError, "No more documents in class %s available" % classlabel
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wikidump-0.1.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
